bench/tests/plans/snapshots/r#mod__plans__wind_farm__Wind Farm - GroupedProduction4 (Execution Plan).snap
---
source: bench/tests/plans/wind_farm.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(site_label@0) as site_label, ENC_PT(wtur_label@1) as wtur_label, year@2 as year, month@3 as month, day@4 as day, hour@5 as hour, minute_10@6 as minute_10, ENC_PT(<uuid>@7) as avg_val]
  AggregateExec: mode=Single, gby=[site_label@0 as site_label, wtur_label@1 as wtur_label, ENC_PT(year@7) as year, ENC_PT(month@6) as month, ENC_PT(day@5) as day, ENC_PT(hour@4) as hour, ENC_PT(minute_10@3) as minute_10], aggr=[<uuid>]
    ProjectionExec: expr=[site_label@1 as site_label, wtur_label@2 as wtur_label, val@3 as val, minute_10@4 as minute_10, hour@5 as hour, day@6 as day, MONTH(__common_expr_2@0) as month, YEAR(__common_expr_2@0) as year]
      ProjectionExec: expr=[ENC_TF(t@4) as __common_expr_2, site_label@1 as site_label, wtur_label@2 as wtur_label, val@3 as val, MUL(4:4:10, FLOOR(DIV(MINUTES(__common_expr_5@0), 4:2:Some(<uuid>),36,18))) as minute_10, HOURS(__common_expr_5@0) as hour, DAY(__common_expr_5@0) as day]
        ProjectionExec: expr=[ENC_TF(t@3) as __common_expr_5, site_label@0 as site_label, wtur_label@1 as wtur_label, val@2 as val, t@3 as t]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp@2, dp@0)], projection=[site_label@0, wtur_label@1, val@3, t@5]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp@2, dp@0)], projection=[site_label@0, wtur_label@1, dp@2, val@4]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts@2, ts@0)], projection=[site_label@0, wtur_label@1, dp@4]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts@2, ts@0)], projection=[site_label@0, wtur_label@1, ts@2]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator@2, generator@0)], projection=[site_label@0, wtur_label@1, ts@4]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator@2, generator@0)], projection=[site_label@0, wtur_label@1, generator@2]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator_asp@2, generator_asp@1)], projection=[site_label@0, wtur_label@1, generator@3]
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys@2, gensys@0)], projection=[site_label@0, wtur_label@1, generator_asp@4]
                          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys@2, gensys@0)], projection=[site_label@0, wtur_label@1, gensys@2]
                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys_asp@2, gensys_asp@1)], projection=[site_label@0, wtur_label@1, gensys@3]
                              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur@2, wtur@0)], projection=[site_label@0, wtur_label@1, gensys_asp@3]
                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur@2, wtur@0)], projection=[site_label@0, wtur_label@1, wtur@2, gensys_asp@4]
                                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp@1, wtur_asp@1)], projection=[site_label@0, wtur_label@2, wtur@3]
                                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp@1, wtur_asp@0)], projection=[site_label@0, wtur_asp@1, wtur_label@3]
                                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site@0, site@0)], projection=[site_label@1, wtur_asp@3]
                                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site@0, site@0)], projection=[site@0, site_label@2]
                                          DataSourceExec: [GPOS] subject=?site, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#Site>
                                          DataSourceExec: [GPOS] subject=?site, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?site_label, additional_filters=[DynamicFilter [ Generation 2; site in (<object id range>) ]]
                                        DataSourceExec: [GPOS] subject=?site, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect>, object=?wtur_asp, additional_filters=[DynamicFilter [ Generation 2; site in (<object id range>) ]]
                                      DataSourceExec: [GPOS] subject=?wtur_asp, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?wtur_label, additional_filters=[DynamicFilter [ Generation 2; wtur_asp in (<object id range>) ]]
                                    DataSourceExec: [GPOS] subject=?wtur, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode>, object=?wtur_asp, additional_filters=[DynamicFilter [ Generation 2; wtur_asp in (<object id range>) ]]
                                  DataSourceExec: [GPOS] subject=?wtur, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect>, object=?gensys_asp, additional_filters=[DynamicFilter [ Generation 2; wtur in (<object id range>) ]]
                                DataSourceExec: [GPOS] subject=?wtur, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#A>, additional_filters=[DynamicFilter [ Generation 2; wtur in (<object id range>) ]]
                              DataSourceExec: [GPOS] subject=?gensys, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode>, object=?gensys_asp, additional_filters=[DynamicFilter [ Generation 2; gensys_asp in (<object id range>) ]]
                            DataSourceExec: [GPOS] subject=?gensys, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#RA>, additional_filters=[DynamicFilter [ Generation 2; gensys in (<object id range>) ]]
                          DataSourceExec: [GPOS] subject=?gensys, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect>, object=?generator_asp, additional_filters=[DynamicFilter [ Generation 2; gensys in (<object id range>) ]]
                        DataSourceExec: [GPOS] subject=?generator, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode>, object=?generator_asp, additional_filters=[DynamicFilter [ Generation 2; generator_asp in (<object id range>) ]]
                      DataSourceExec: [GPOS] subject=?generator, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#GAA>, additional_filters=[DynamicFilter [ Generation 2; generator in (<object id range>) ]]
                    DataSourceExec: [GPOS] subject=?generator, predicate=<https://github.com/magbak/chrontext#hasTimeseries>, object=?ts, additional_filters=[DynamicFilter [ Generation 2; generator in (<object id range>) ]]
                  DataSourceExec: [GPOS] subject=?ts, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object="Production", additional_filters=[DynamicFilter [ Generation 2; ts in (<object id range>) ]]
                DataSourceExec: [GPOS] subject=?ts, predicate=<https://github.com/magbak/chrontext#hasDataPoint>, object=?dp, additional_filters=[DynamicFilter [ Generation 2; ts in (<object id range>) ]]
              DataSourceExec: [GPOS] subject=?dp, predicate=<https://github.com/magbak/chrontext#hasValue>, object=?val, additional_filters=[DynamicFilter [ Generation 2; dp in (<object id range>) ]]
            FilterExec: EBV(GEQ(__common_expr_6@0, 5:{date_time_type:0,value:63797446013.000000000000000000,offset:})) AND EBV(LEQ(__common_expr_6@0, 5:{date_time_type:0,value:63797492813.000000000000000000,offset:})), projection=[dp@1, t@2]
              ProjectionExec: expr=[ENC_TF(t@1) as __common_expr_6, dp@0 as dp, t@1 as t]
                DataSourceExec: [GPOS] subject=?dp, predicate=<https://github.com/magbak/chrontext#hasTimestamp>, object=?t, additional_filters=[DynamicFilter [ Generation 2; dp in (<object id range>) ]]
